volexc/tests/ui/parse_missing_field_index.out
Error: found "}"
   ╭─[parse_missing_field_index.vol:4:1]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
───╯